--- a/app/src/main/res/layout/activity_ringkasan_pembelian.xml
+++ b/app/src/main/res/layout/activity_ringkasan_pembelian.xml
@@ -47,6 +47,7 @@
                     android:textStyle="bold"
                     app:fontFamily="@font/nunito_light" />
                 <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_alamat"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Jalan Kemangi, No.1, Jakarta Barat"
@@ -63,19 +64,109 @@
                 android:layout_gravity="center_vertical"/>
         </LinearLayout>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_pedagang"
-            android:orientation="vertical"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:listitem="@layout/item_ringkasan_pembelian"
-            android:layout_marginTop="20dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/btn_login"
-            app:layout_constraintTop_toBottomOf="@id/searchView"
-            />
+       <LinearLayout
+           android:layout_marginVertical="20dp"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:orientation="vertical">
+           <LinearLayout
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:orientation="horizontal">
+               <LinearLayout
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:orientation="vertical"
+                   android:layout_weight="1">
+                   <com.google.android.material.textview.MaterialTextView
+                       android:id="@+id/tv_title"
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content"
+                       android:maxLines="1"
+                       android:textSize="16sp"
+                       android:ellipsize="end"
+                       android:fontFamily="@font/nunito_bold"
+                       android:textColor="@color/black"
+                       android:textStyle="bold"
+                       android:text="Kentang goreng RR"
+                       />
+
+                   <com.google.android.material.textview.MaterialTextView
+                       android:id="@+id/tv_harga"
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content"
+                       android:textColor="#878787"
+                       android:text="Rp 1.000"/>
+
+                   <LinearLayout
+                       android:layout_width="100dp"
+                       android:paddingHorizontal="15dp"
+                       android:paddingVertical="5dp"
+                       android:gravity="center"
+                       android:layout_marginTop="8dp"
+                       android:layout_height="wrap_content"
+                       android:background="@drawable/bg_pembayaran"
+                       android:orientation="horizontal">
+                       <ImageView
+                           android:layout_width="12dp"
+                           android:layout_height="12dp"
+                           android:src="@drawable/ic_baseline_add_24"/>
+                       <com.google.android.material.textview.MaterialTextView
+                           android:layout_width="wrap_content"
+                           android:layout_height="wrap_content"
+                           android:text="Catatan"
+                           android:textColor="@color/black"
+                           android:textSize="12sp"
+                           android:layout_gravity="center"
+                           android:textStyle="bold"
+                           android:layout_marginLeft="4dp"
+                           app:fontFamily="@font/nunito_light" />
+                   </LinearLayout>
+               </LinearLayout>
+               <com.makeramen.roundedimageview.RoundedImageView
+                   android:id="@+id/iv_event"
+                   android:layout_width="90dp"
+                   android:scaleType="centerCrop"
+                   app:riv_corner_radius="10dp"
+                   android:layout_height="90dp"
+                   android:src="@drawable/ic_launcher_background"
+                   app:layout_constraintStart_toStartOf="parent"
+                   app:layout_constraintTop_toTopOf="parent"
+                   />
+
+           </LinearLayout>
+           <LinearLayout
+               android:layout_marginTop="10dp"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:gravity="right"
+               app:layout_constraintTop_toBottomOf="@id/iv_event"
+               app:layout_constraintStart_toStartOf="parent"
+               app:layout_constraintEnd_toEndOf="parent">
+
+               <ImageView
+                   android:id="@+id/btn_minus"
+                   android:layout_width="28dp"
+                   android:layout_height="28dp"
+                   android:src="@drawable/ic_minus"/>
+               <com.google.android.material.textview.MaterialTextView
+                   android:id="@+id/tv_total"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:textSize="16sp"
+                   android:text="0"
+                   android:layout_marginHorizontal="10dp"
+                   android:layout_gravity="center_vertical"
+                   android:fontFamily="@font/nunito_bold"
+                   android:textColor="@color/black"
+                   />
+               <ImageView
+                   android:id="@+id/btn_plus"
+                   android:layout_width="28dp"
+                   android:layout_height="28dp"
+                   android:src="@drawable/ic_plus"/>
+           </LinearLayout>
+       </LinearLayout>
 
         <LinearLayout
             android:id="@+id/btn_pembayaran"
@@ -146,6 +237,7 @@
                 app:fontFamily="@font/nunito_light"
                 />
             <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tv_harga2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="7.500"
@@ -204,6 +296,7 @@
                 app:fontFamily="@font/nunito_bold"
                 />
             <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tv_harga3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="7.500"
